# proxdex

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/proxdex/: __init__.py  __main__.py  bleed.py  borders.py  calibrate.py  cli.py  config.py  errors.py  frames.py  grade.py  library.py  media.py  report.py  sheet.py  sources.py  upscale.py  webui.html  webui.py
