[project]
name = "proxdex"
dynamic = ["version"]
description = "Organize and drive a Pokémon proxy-card making pipeline — a searchable library around cardbleed and paperloom"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Erik Bävenstrand" }]
requires-python = ">=3.11"
dependencies = [
    "pillow>=10",
    "numpy>=1.26",
    "requests>=2.31",
    "rich-click>=1.8",
    "cardbleed>=0.2",
    "img2pdf>=0.5",
]
keywords = ["pokemon", "card", "proxy", "printing", "tcg", "library", "upscale"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Printing",
]

[project.urls]
Repository = "https://github.com/ErikBavenstrand/proxdex"
Issues = "https://github.com/ErikBavenstrand/proxdex/issues"

[project.scripts]
proxdex = "proxdex.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
# × is used deliberately in size displays (1468×2048)
allowed-confusables = ["×", "·", "→"]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]

[tool.pyright]
include = ["src"]
typeCheckingMode = "standard"
pythonVersion = "3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/proxdex/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/proxdex"]
