[project]
name = "proxdex"
dynamic = ["version"]
description = "Organize and print proxy cards — a searchable library that fetches, upscales, colour-corrects and imposes print-ready PDFs (fronts/backs/duplex). Built on cardbleed + Upscayl."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Erik Bävenstrand" }]
requires-python = ">=3.11"
dependencies = [
    "pillow>=10",
    "numpy>=1.26",
    "requests>=2.31",
    "rich-click>=1.8",
    "cardbleed>=0.2",
    "img2pdf>=0.5",
]
keywords = ["pokemon", "card", "proxy", "printing", "tcg", "library", "upscale"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Printing",
]

[project.optional-dependencies]
ui = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",  # file uploads (import / back / calibration scan)
    "tomlkit>=0.12",            # comment-preserving config edits
]

[project.urls]
Repository = "https://github.com/ErikBavenstrand/proxdex"
Issues = "https://github.com/ErikBavenstrand/proxdex/issues"

[project.scripts]
proxdex = "proxdex.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pyright>=1.1.390",
    # so lint/typecheck see the optional web-UI module
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
    "tomlkit>=0.12",
]

[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
# × / · / → are used deliberately in size displays and progress output
allowed-confusables = ["×", "·", "→"]
select = ["ALL"]
ignore = [
    "D",       # docstrings: documented where it matters, not every helper
    "COM812",  # trailing comma — handled by the formatter
    "ISC001",  # implicit string concat — conflicts with the formatter
    "ANN401",  # a few deliberate Any (ctx.obj, parsed JSON/TOML)
    "EM101", "EM102",  # inline f-strings in raises read fine here
    "TRY003",  # exception messages are specific and local
    "PLR0913", # click command callbacks legitimately take many options
    "PLR2004", # image/geometry literals (255, 0.5, ...) are self-explanatory
    "FBT001", "FBT002",  # click injects boolean flags as parameters
    "S603", "S607",  # subprocess: fixed argv, trusted tool names (cardbleed etc.)
    "C901", "PLR0912", "PLR0915",  # a few inherently branchy render/CLI functions
    "TD002", "TD003", "FIX002",  # TODO bookkeeping
    "PLC0415",  # intentional lazy imports of heavy/optional deps inside commands
    "TC",      # `from __future__ import annotations` makes TYPE_CHECKING moves moot
    "DTZ011", "DTZ005",  # naive local dates are intentional for batch labels
]

[tool.ruff.lint.per-file-ignores]
"src/proxdex/cli.py" = ["PLC0206"]  # dict iteration in the settings-panel loop

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
# numpy/pillow/img2pdf expressions surface as Unknown; keep strict elsewhere
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportMissingTypeStubs = false
# FastAPI/click register handlers via decorators — they aren't "called"
reportUnusedFunction = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/proxdex/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/proxdex"]
# ship the web-UI frontend (non-.py, so make inclusion explicit)
force-include = { "src/proxdex/webui.html" = "proxdex/webui.html" }
